storage/innobase/fts/fts0opt.cc
@@ -2628,6 +2628,10 @@ UNIV_INTERN void fts_optimize_add_table(dict_table_t* table)
 	msg = fts_optimize_create_msg(FTS_MSG_ADD_TABLE, table);
 
 	ib_wqueue_add(fts_optimize_wq, msg, msg->heap);
+
+	mutex_enter(&table->fts->bg_threads_mutex);
+	table->fts->in_queue = true;
+	mutex_exit(&table->fts->bg_threads_mutex);
 }
 
 /**********************************************************************//**
@@ -2656,6 +2660,15 @@ fts_optimize_remove_table(
 		return;
 	}
 
+	fts_t*	fts = table->fts;
+	mutex_enter(&fts->bg_threads_mutex);
+	bool is_in_optimize_queue = fts->in_queue;
+	mutex_exit(&fts->bg_threads_mutex);
+
+	if (!is_in_optimize_queue) {
+		return;
+	}
+
 	msg = fts_optimize_create_msg(FTS_MSG_DEL_TABLE, NULL);
 
 	/* We will wait on this event until signalled by the consumer. */
@@ -2673,6 +2686,10 @@ fts_optimize_remove_table(
 	os_event_wait(event);
 
 	os_event_free(event);
+
+	mutex_enter(&fts->bg_threads_mutex);
+	fts->in_queue = false;
+	mutex_exit(&fts->bg_threads_mutex);
 }
 
 /** Send sync fts cache for the table.
@@ -2706,6 +2723,10 @@ fts_optimize_request_sync_table(
 	msg->ptr = table_id;
 
 	ib_wqueue_add(fts_optimize_wq, msg, msg->heap);
+
+	mutex_enter(&table->fts->bg_threads_mutex);
+	table->fts->in_queue = true;
+	mutex_exit(&table->fts->bg_threads_mutex);
 }
 
 /** Add a table to fts_slots if it doesn't already exist. */
@@ -2849,6 +2870,10 @@ static void fts_optimize_sync_table(table_id_t table_id)
 		    && table->fts && table->fts->cache) {
 			fts_sync_table(table, true, false, false);
 		}
+
+		DBUG_EXECUTE_IF(
+			"ib_optimize_wq_hang",
+			os_thread_sleep(6000000););
 
 		dict_table_close(table, FALSE, FALSE);
 	}
